# WEST

./: .gitignore  .gitmodules  CITATION.cff  Custom_notation.py  LICENSE  LTL wff.docx  LTL_semantics.py  LTL_truth_table.py  LTL_wff.py  MLTL wff (infix).docx  MLTL wff.docx  MLTL_semantics.py  MLTL_truth_table.py  MLTL_wff.py  Makefile  README.md  Type_conversion.py  false_output.txt  gui.py  key  output.txt  p1  setup.sh  test.py  todo.txt  todo.txt.txt  true_output.txt  ~$TL wff (v2).docx  ~$TL wff.docx  ~WRL0452.tmp
verification/MLTLMaxSAT-FORMATS/: CMakeLists.txt  LICENSE  LTL.g4  MLTL.g4  installer.sh  runAll.sh  runShort.sh  runner.cpp
verification/MLTLMaxSAT-FORMATS/BenchmarkResults/: airspace_properties.prop  airspace_properties.propS  airspace_properties.smt2  airspace_properties0.prop  airspace_properties0.propS  airspace_properties0.smt2  airspace_properties00.prop  airspace_properties00.propS  airspace_properties00.smt2  contract_properties.prop  contract_properties.propS  contract_properties.smt2  contract_properties0.prop  contract_properties0.propS  contract_properties0.smt2  contract_properties00.prop  contract_properties00.propS  contract_properties00.smt2  extended_properties.prop  extended_properties.propS  extended_properties.smt2  extended_properties0.prop  extended_properties0.propS  extended_properties0.smt2  extended_properties00.prop  extended_properties00.propS  extended_properties00.smt2  nominal_properties.prop  nominal_properties.propS  nominal_properties.smt2  nominal_properties0.prop  nominal_properties0.propS  nominal_properties0.smt2  nominal_properties00.prop  nominal_properties00.propS  nominal_properties00.smt2  randomList.bmc  randomList.ic3  randomList.prop  randomList.propS  (+10 more)
verification/MLTLMaxSAT-FORMATS/Benchmarks/LTLSatisfiability/: airspace_properties.ltl  contract_properties.ltl  extended_properties.ltl  nominal_properties.ltl  verification_properties.ltl
verification/MLTLMaxSAT-FORMATS/Benchmarks/MLTLSatisfiability/: airspace_properties.mltl  airspace_properties.mltl0  airspace_properties.mltl00  contract_properties.mltl  contract_properties.mltl0  contract_properties.mltl00  extended_properties.mltl  extended_properties.mltl0  extended_properties.mltl00  nominal_properties.mltl  nominal_properties.mltl0  nominal_properties.mltl00  randomList.mltl  verification_properties.mltl  verification_properties.mltl0  verification_properties.mltl00
verification/MLTLMaxSAT-FORMATS/Benchmarks/MaxSATCases/: testP10L20M100.mltl  testP15L30M100.mltl  testP4L10M100.mltl  testP4L10M1000.mltl  testP4L10M10000.mltl  testP4L10M100000.mltl  testP4L10M1000000.mltl
verification/MLTLMaxSAT-FORMATS/Benchmarks/MaxSATTests/: test0.mltl  test1.mltl  test10.mltl  test11.mltl  test12.mltl  test13.mltl  test14.mltl  test15.mltl  test16.mltl  test17.mltl  test18.mltl  test19.mltl  test2.mltl  test20.mltl  test21.mltl  test22.mltl  test23.mltl  test24.mltl  test25.mltl  test26.mltl  test27.mltl  test28.mltl  test29.mltl  test3.mltl  test30.mltl  test31.mltl  test32.mltl  test33.mltl  test34.mltl  test35.mltl  test36.mltl  (+69 more)
verification/MLTLMaxSAT-FORMATS/environment/: Dockerfile
verification/MLTLMaxSAT-FORMATS/include/: Formula.h  LTL2MLTL.h  MLTLFormula.h  MyExpression.h  String2MLTL.h  Translators.h
verification/MLTLMaxSAT-FORMATS/plots/: plotter.py  presentation.mplstyle
verification/MLTLMaxSAT-FORMATS/src/: Formula.cpp  LTL2MLTL.cpp  MLTL2LiSMT.cpp  MLTL2propFast.cpp  MLTL2propSlow.cpp  MLTLFormula.cpp  MaxSAT.cpp  String2MLTL.cpp  Translators.cpp  benchmarker.cpp  genMLTLBenchmarks.cpp  main.cpp  runner.cpp
(+2262 files in other folders)
